# sdtui

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
