[package]
name = "sdtui"
version = "0.1.0"
edition = "2024"
authors = ["Abhijeet Mohanan <https://github.com/abhijeetmohanan>"]
description = "A high-performance TUI for managing systemd user and system units with live logs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/abhijeetmohanan/sdtui"
homepage = "https://github.com/abhijeetmohanan/sdtui"
readme = "README.md"
keywords = ["systemd", "tui", "linux", "logs", "service-manager"]
categories = ["command-line-utilities", "system-administration"]

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
regex = "1.12.3"
